[package]
name = "network-utxos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bitcoin = { version = "0.31.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.0"
parking_lot = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.1"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
